--- a/composer.json
+++ b/composer.json
@@ -10,17 +10,23 @@
         }
     ],
     "require": {
-        "php": ">=7.2.5",
-        "stripe/stripe-php": "^9.2",
+        "php": ">=7.4",
         "symfony/http-kernel": "^5.4 | ^6.0",
         "symfony/config": "^5.4 | ^6.0",
         "symfony/dependency-injection": "^5.4 | ^6.0",
         "symfony/framework-bundle": "^5.4 | ^6.0",
         "symfony/event-dispatcher": "^5.4 | ^6.0",
         "symfony/console": "^5.4 | ^6.0",
+        "symfony/polyfill-php80": "^1.26",
         "doctrine/orm": "^2.13",
+        "doctrine/doctrine-bundle": "^2.7",
         "twig/twig": "^3.4",
-        "doctrine/doctrine-bundle": "^2.7"
+        "stripe/stripe-php": "^9.2"
+    },
+    "require-dev": {
+        "phpstan/phpstan": "^1.8",
+        "phpstan/phpstan-symfony": "^1.2",
+        "symfony/maker-bundle": ">=1.0"
     },
     "autoload": {
         "psr-4": {
@@ -31,9 +37,5 @@
         "psr-4": {
             "Nimzero\\StripeBundle\\Tests\\": "tests/"
         }
-    },
-    "require-dev": {
-        "phpstan/phpstan": "^1.8",
-        "phpstan/phpstan-symfony": "^1.2"
     }
 }
