--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,14 @@
 {
     "name": "nimzero/stripe-bundle",
-    "description": "A Symfony Bundle to integrate Stripe.",
     "type": "symfony-bundle",
+    "description": "A Symfony Bundle to integrate Stripe.",
+    "keywords": ["Symfony", "bundle", "Stripe"],
+    "homepage": "https://github.com/NimZero/NimZeroStripeBundle",
     "license": "MIT",
     "authors": [
         {
             "name": "Nimzero",
-            "email": "contact@Nimzero.fr"
+            "email": "contact@nimzero.fr"
         }
     ],
     "require": {
@@ -26,7 +28,9 @@
     "require-dev": {
         "phpstan/phpstan": "^1.8",
         "phpstan/phpstan-symfony": "^1.2",
-        "symfony/maker-bundle": ">=1.0"
+        "symfony/maker-bundle": "^1.0",
+        "phpunit/phpunit": "^9.5",
+        "symfony/phpunit-bridge": "^5.4 | ^6.0"
     },
     "autoload": {
         "psr-4": {
@@ -37,5 +41,11 @@
         "psr-4": {
             "Nimzero\\StripeBundle\\Tests\\": "tests/"
         }
+    },
+    "scripts": {
+        "tests": [
+            "vendor/bin/phpstan",
+            "vendor/bin/phpunit"
+        ]
     }
 }
