Fix composer.json, fix Configuration for null API version

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -13,4 +13,5 @@
         }
     ],
     "phpGettersSetters.templatesDir": "/var/www/dev.nimzero.fr/NimZeroStripeBundle/.vscode",
+    "esbonio.sphinx.confDir": "",
 }
