--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,8 @@
         "symfony/config": "^5.4 | ^6.0",
         "symfony/console": "^5.4 | ^6.0",
         "doctrine/orm": "^2.14",
-        "symfony/security-bundle": "^5.4 | ^6.0"
+        "symfony/security-bundle": "^5.4 | ^6.0",
+        "twig/twig": "^3.5"
     },
     "require-dev": {
         "symfony/maker-bundle": "^1.48"
