--- a/config/services.yaml
+++ b/config/services.yaml
@@ -1,21 +1,25 @@
 services:
     _defaults:
+        public: false
         autowire: true
         autoconfigure: true
     
     Nimzero\StripeBundle\:
         resource: '../src/'
+        exclude:
+            - '../src/DependencyInjection/'
 
     nimzero_stripe_bundle.stripe_helper:
         class: Nimzero\StripeBundle\Service\StripeHelper
-        public: false
-        arguments:
-            '$stripe_config': null
 
     nimzero_stripe_bundle.maker.webhook_from_events:
         class: Nimzero\StripeBundle\Maker\MakeWebhookFromEvents
         arguments:
             '$eventRegistry': '@maker.event_registry'
+    
+    nimzero_stripe_bundle.twig_extension_runtime:
+        class: Nimzero\StripeBundle\Twig\StripeTwigRuntime
+        arguments:
+            '$stripeHelper': '@nimzero_stripe_bundle.stripe_helper'
 
     Nimzero\StripeBundle\Service\StripeHelper: '@nimzero_stripe_bundle.stripe_helper'
-    Nimzero\StripeBundle\Maker\MakeWebhookFromEvents: '@nimzero_stripe_bundle.maker.webhook_from_events'
